# looptrip

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
Formula/: looptrip.rb
commands/: looptrip.md
docs/: adapters.md  architecture.md  framing.md  otel-live.md  proof.md  testing.md  usage.md
docs/cases/: 2e6c0288.md  README.md  da27b414.md
docs/standards/: otel-genai-handoff-engagement.md
proof/: run_proof.py
src/looptrip/: __init__.py  __main__.py  attribution.py  cli.py  detector.py  normalize.py  proof.py
src/looptrip/_data/: cast_db_runaways.json
src/looptrip/adapters/: __init__.py  cast_db.py  otel.py
src/looptrip/detectors/: __init__.py  _shared.py  deadlock.py  non_termination.py  ping_pong.py  types.py
src/looptrip/otel_live/: __init__.py  bridge.py  emit.py  processor.py  sampler.py
tests/: test_attribution.py  test_cast_db_adapter.py  test_cast_db_adapter_adversarial.py  test_cast_db_live_path.py  test_cli_adversarial.py  test_cli_detectors.py  test_cli_otel.py  test_detector.py  test_detector_adversarial.py  test_detector_config.py  test_detector_deadlock.py  test_detector_non_termination.py  test_detector_phase2_integration.py  test_detector_ping_pong.py  test_fixture_integrity.py  test_independent_rederivation.py  test_ingestion_robustness.py  test_normalize.py  test_otel_adapter.py  test_otel_handoff_reference.py  test_otel_live.py  test_proof.py  test_stdlib_core.py  test_to_agent_locks.py
tests/fixtures/: otel_genai_handoff_spans.json  otel_genai_handoff_spans_otlp.json
